e2e: spell the lifecycle steps as the product spells its verbs
The step was "run", which the product already reserves for a different
meaning - apply then start - while its actual verb is "start". The envelope
mapped run onto START and rejected start outright, so the one word an author
would reach for first was an error, and the frozen surface disagreed with the
product about what "run" means. Spell the four steps exactly as the product
spells them; the hand-written switch that existed only to perform the rename
is gone, and "run" stays free for the meaning the product already gives it.

The state matcher is now a scalar. A specification references exactly one
pipeline and the executor already resolves its id through the product's
parser, so the map key was an id to copy by hand, get wrong, and then watch
poll a pipeline that does not exist until it timed out.

Close the gaps that let a specification pass while testing less than it says:

- A duplicate key last-won with only a log line, so a repeated table quietly
  dropped the first count and a repeated matcher word defeated the
  one-word-per-matcher guard. Duplicate keys are now rejected.
- count and state maps went through Map.copyOf, whose iteration order is
  randomised per JVM run, so endpoints were read from a live database in a
  different order every run and a failure message never read the same twice.
- An empty count body, and an absent or empty steps list, held vacuously.
- A fractional row count truncated in silence; a negative one was accepted.
- A key YAML resolved to a non-string escaped as a raw ClassCastException,
  naming nothing.
- An alias required exactly one dot, so the harness could not address a table
  whose name contains one - a table the product itself resolves by splitting
  at the first dot.
- A cdc row count was an int while a seed row count was a long.
- Wrapping every RuntimeException from the product's parser blamed the author
  for what may be a defect in the parser; only a DSL er